# mle_fiap_fase_4

./: .gitignore  .nixpacks.toml  Dockerfile  README.md  bootstrap.sh  pyproject.toml
.devcontainer/: devcontainer.json
app/metrics/: evaluate.py
app/model/: forecast.py
app/utils/output/: AAPL.csv  AMZN.csv  GOOGL.csv  JNJ.csv  JPM.csv  META.csv  MSFT.csv  NVDA.csv  TSLA.csv  V.csv
fcast_api/: Dockerfile  README.md  pyproject.toml
fcast_api/app/: README.md  main.py
fcast_api/app/routers/: router.py
fcast_api/app/utils/: etl.py
saved_models/: aapl_ws10.keras  aapl_ws20.keras  aapl_ws25.keras  aapl_ws3.h5  aapl_ws3.keras  aapl_ws40.keras  aapl_ws60.keras  googl_ws25.keras  googl_ws3.keras  meta_ws3.keras  msft_ws25.keras  msft_ws3.keras  tsla_ws3.keras
