[project]
name = "mle_fiap_fase_4"
version = "0.1.0"
description = ""
authors = [
    {name = "Lucas Martins"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "tensorflow (>=2.19.0,<3.0.0)",
    "polars (>=1.30.0,<2.0.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "fastapi (>=0.115.12,<0.116.0)",
    "yfinance (>=0.2.61,<0.3.0)",
    "uvicorn (>=0.34.3,<0.35.0)",
    "orjson (>=3.10.18,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
